tests/ui_fail/conflicting_inherent_items.stderr
error[E0592]: duplicate definitions with name `kita`
  --> tests/ui_fail/conflicting_inherent_items.rs:21:9
   |
21 |         fn kita() -> &'static str {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `kita`
...
26 |         fn kita() -> String {
   |         ------------------- other definition for `kita`
